misc/network-profiles/multitenant-network-policy.yaml
kind: NetworkPolicy
apiVersion: extensions/v1beta1
metadata:
  name: legacy-multitenant
spec:
  podSelector:
  ingress:
  - from:
    - podSelector: {}
  - from:
    - namespaceSelector:
        matchLabels:
          name: default
