misc/network-profiles/multitenant-policy.yaml
apiVersion: extensions/v1beta1
kind: NetworkPolicy
metadata:
 name: multitenant-network-policy
spec:
 ingress:
  - from:
     - namespaceSelector: []
